--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^22.5.4",
     "commander": "^12.1.0",
     "fs": "^0.0.1-security",
+    "jest": "^29.7.0",
     "node-ts": "^6.1.2",
     "path": "^0.12.7",
     "ts-node": "^10.9.2",
