--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ECE461_Project_Phase1",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "repository": "https://github.com/mohammed-alaa40123/ECE461_Project_Phase1.git",
   "author": "mohammed-alaa40123 <mohammedalaa40123@gmail.com>",
   "license": "MIT",
@@ -9,14 +10,28 @@
     "cli": "Dist/install.js"
   },
   "dependencies": {
-    "@types/node": "^22.5.4",
+    "@octokit/app": "^15.1.0",
+    "@octokit/core": "^6.1.2",
+    "@octokit/oauth-app": "^7.1.3",
+    "@octokit/plugin-paginate-graphql": "^5.2.2",
+    "@octokit/plugin-paginate-rest": "^11.3.3",
+    "@octokit/plugin-rest-endpoint-methods": "^13.2.4",
+    "@octokit/webhooks": "^13.3.0",
+    "aggregate-error": "^5.0.0",
     "commander": "^12.1.0",
+    "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
     "jest": "^29.7.0",
     "node-ts": "^6.1.2",
+    "octokit": "^4.0.2",
     "path": "^0.12.7",
+    "tsc": "^2.0.4"
+  },
+  "devDependencies": {
+    "@octokit/types": "^13.5.0",
+    "@types/aggregate-error": "^1.0.0",
+    "@types/node": "^22.5.4",
     "ts-node": "^10.9.2",
-    "tsc": "^2.0.4",
     "typescript": "^5.5.4"
   }
 }
