--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "ece461_project_phase1",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mohammed-alaa40123/ECE461_Project_Phase1.git"
@@ -23,6 +22,7 @@
     "@types/express": "^4.17.21",
     "aggregate-error": "^5.0.0",
     "axios": "^1.7.7",
+    "chalk": "^5.3.0",
     "commander": "^12.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -31,7 +31,8 @@
     "node-ts": "^6.1.2",
     "nodemon": "^3.1.4",
     "octokit": "^4.0.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "tsc": "^2.0.4"
   },
   "devDependencies": {
     "@octokit/types": "^13.5.0",
